fix landing z-index

--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,7 @@ html {
   width: 100%;
   height: 100%;
   opacity: 0.5;
+  z-index: -1;
 }
 
 .front-title {
